Fix names and spelling in index.html

--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@ const students = [
     {c:"5th", n:"Adnan Mushtaq", p:"Mushtaq Ah. War", m:[37, 32, 23, 13], t:105, max:200, sub:sub5th},
     {c:"5th", n:"Muqadas Majeed", p:"Ab. Majeed Mir", m:[35, 34, 20, 6], t:95, max:200, sub:sub5th},
     {c:"5th", n:"Zeeshan Fayaz", p:"Fayaz Ah. Shaikh", m:[13, 22, 16, 21], t:72, max:200, sub:sub5th},
-    {c:"5th", n:"Kashiful Haq", p:"Javid Ah. Bhat", m:[23, 26, 14, 9], t:72, max:200, sub:sub5th},
+    {c:"5th", n:"Kashif ul Haq", p:"Javaid Ah. Bhat", m:[23, 26, 14, 9], t:72, max:200, sub:sub5th},
     {c:"5th", n:"Suhaib Shahzad", p:"Shahzad Ah. Lone", m:[38, 40, 25, 14], t:117, max:200, sub:sub5th},
-    {c:"5th", n:"Sadiya Jan", p:"Javid Ah. Bhat", m:[27, 28, 19, 15], t:89, max:200, sub:sub5th},
+    {c:"5th", n:"Sadiya Jan", p:"Javaid Ah. Bhat", m:[27, 28, 19, 15], t:89, max:200, sub:sub5th},
     {c:"5th", n:"Sufiya Shabir", p:"Shabir Ah. Mir", m:[33, 38, 36, 29], t:136, max:200, sub:sub5th},
     {c:"5th", n:"Sobia Shabir", p:"Shabir Ah. Mir", m:[46, 40, 41, 32], t:159, max:200, sub:sub5th},
     {c:"5th", n:"Mohsin Manzoor", p:"Manzoor Ah. Mir", m:[16, 30, 14, 16], t:76, max:200, sub:sub5th},
