Fix typo in name from 'Khawaja Sohail' to 'Khawaja Suhail'

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ const students = [
     {c:"5th", n:"Moeen ul Islam", p:"M. Shafi Malik", m:[20, 32, 17, 15], t:84, max:200, sub:sub5th},
     {c:"5th", n:"Aamir Akbar", p:"M. Akbar Mir", m:[33, 30, 29, 21], t:113, max:200, sub:sub5th},
     {c:"5th", n:"Usman Jameel", p:"Jameel Ah. Mir", m:[26, 32, 30, 17], t:105, max:200, sub:sub5th},
-    {c:"5th", n:"Khawaja Sohail", p:"M. Sultan Khawaja", m:[40, 44, 24, 10], t:118, max:200, sub:sub5th},
+    {c:"5th", n:"Khawaja Suhail", p:"M. Sultan Khawaja", m:[40, 44, 24, 10], t:118, max:200, sub:sub5th},
     {c:"5th", n:"Adnan Mushtaq", p:"Mushtaq Ah. War", m:[37, 32, 23, 13], t:105, max:200, sub:sub5th},
     {c:"5th", n:"Muqadas Majeed", p:"Ab. Majeed Mir", m:[35, 34, 20, 6], t:95, max:200, sub:sub5th},
     {c:"5th", n:"Zeeshan Fayaz", p:"Fayaz Ah. Shaikh", m:[13, 22, 16, 21], t:72, max:200, sub:sub5th},
