Fix spelling of 'Omeed' and 'M' in index.html

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ const students = [
     {c:"4th", n:"Tabinda Parvaiz", p:"Parvaiz Ah Bhat", m:[39, 50, 46, 35], t:170, max:200, sub:sub4th},
     {c:"4th", n:"Irtifa Ashiq", p:"Ashiq Hussain Bhat", m:[33, 50, 44, 43], t:170, max:200, sub:sub4th},
     {c:"4th", n:"Imran Irshad", p:"Irshad Ah Bhat", m:[37, 50, 48, 28], t:163, max:200, sub:sub4th},
-    {c:"4th", n:"Umeed Basharat", p:"Bashir Ah Hajam", m:[42, 39, 44, 38], t:163, max:200, sub:sub4th},
+    {c:"4th", n:"Omeed Basharat", p:"Basharat Ah Hajam", m:[42, 39, 44, 38], t:163, max:200, sub:sub4th},
     {c:"4th", n:"Hazim Majeed", p:"Ab Majeed Lone", m:[34, 23, 42, 50], t:149, max:200, sub:sub4th},
     {c:"4th", n:"Nelofar Shafi", p:"M. Shafi Bhat", m:[35, 42, 27, 44], t:148, max:200, sub:sub4th},
     {c:"4th", n:"Nazima Irshad", p:"Irshad Ah Sheikh", m:[31, 37, 46, 31], t:145, max:200, sub:sub4th},
@@ -222,7 +222,7 @@ const students = [
     {c:"8th", n:"Mariya Arif", p:"M Arif khan", m:[47, 49], t:96, max:100, sub:subSenior},
 
     // CLASS 10th
-    {c:"10th", n:"Faheem Sultan", p:"Md Sultan Khawaja", m:[7, 21], t:28, max:100, sub:subSenior},
+    {c:"10th", n:"Faheem Sultan", p:"M Sultan Khawaja", m:[7, 21], t:28, max:100, sub:subSenior},
     {c:"10th", n:"Murtaza Bashir", p:"Bashir Ah. Khawaja", m:[20, 26], t:46, max:100, sub:subSenior},
     {c:"10th", n:"Zuhaib Ah. Mir", p:"Bashir Ah. Mir", m:[15, 23], t:38, max:100, sub:subSenior}
 ];
